--- a/Style/style.scss
+++ b/Style/style.scss
@@ -9,17 +9,79 @@
   padding: 0;
 }
 
-.calculatorGrid {
+body {
   display: grid;
   grid-template:
-    "gbb gbb gbb gbb"
-    "gbac gbps gb% gbd"
+    "gbbb gbbb gbbb gbbb"
+    "gbac gbps gbp gbd"
     "gb7 gb8 gb9 gbx"
-    "gb4 gb5 gb6 gb-"
-    "gb1 gb2 gb3 gb+"
-    "gbb gbb gb. gb=";
+    "gb4 gb5 gb6 gbm"
+    "gb1 gb2 gb3 gbplus"
+    "gb0 gb0 gbdot gbequals";
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-rows: 20% 20% 20% 20% 20%;
 }
 
+.gbbb {
+  grid-area: gbbb;
+}
+.gbac {
+  grid-area: gbac;
+}
+.gbps {
+  grid-area: gbps;
+}
+.gbp {
+  grid-area: gbp;
+}
+.gbd {
+  grid-area: gbd;
+}
+.gb7 {
+  grid-area: gb7;
+}
+.gb8 {
+  grid-area: gb8;
+}
+.gb9 {
+  grid-area: gb9;
+}
+.gbx {
+  grid-area: gbx;
+}
+.gb4 {
+  grid-area: gb4;
+}
+.gb5 {
+  grid-area: gb5;
+}
+.gb6 {
+  grid-area: gb6;
+}
+.gbm {
+  grid-area: gbm;
+}
+.gb1 {
+  grid-area: gb1;
+}
+.gb2 {
+  grid-area: gb2;
+}
+.gb3 {
+  grid-area: gb3;
+}
+.gbplus {
+  grid-area: gbplus;
+}
+.gb0 {
+  grid-area: gb0;
+}
+.gbdot {
+  grid-area: gbdot;
+}
+.gbequals {
+  grid-area: gbequals;
+}
 div {
   border: 5px solid black;
   height: 5vh;
