--- a/Style/style.css
+++ b/Style/style.css
@@ -5,24 +5,28 @@
 }
 
 .calculatorGrid {
-  height: 40vh;
-  width: 40vw;
+  height: 50vh;
+  width: 50vw;
   display: grid;
   grid-template: "gbbb gbbb gbbb gbbb" "gbbb gbbb gbbb gbbb" "gbac gbps gbp gbd" "gb7 gb8 gb9 gbx" "gb4 gb5 gb6 gbm" "gb1 gb2 gb3 gbplus" "gb0 gb0 gbdot gbequals";
   grid-template-columns: 25% 25% 25% 25%;
   grid-template-rows: 14.3% 14.3% 14.3% 14.3% 14.3%;
-  background-color: aqua;
+  align-items: center;
+  justify-items: center;
 }
 
 .calculatorButton {
-  height: 100%;
-  width: 100%;
+  height: 70%;
+  width: 70%;
   border: 2px solid black;
+  border-radius: 40px;
+  text-align: center;
 }
 
 #gbbb {
   grid-area: gbbb;
-  width: 100%;
+  width: 90%;
+  border: 10px solid #2a9d8f;
 }
 
 #gbac {
@@ -91,7 +95,7 @@
 
 #gb0 {
   grid-area: gb0;
-  width: 100%;
+  width: 90%;
 }
 
 #gbdot {
