--- a/Style/style.scss
+++ b/Style/style.scss
@@ -9,8 +9,8 @@
   padding: 0;
 }
 .calculatorGrid {
-  height: 40vh;
-  width: 40vw;
+  height: 50vh;
+  width: 50vw;
   display: grid;
   grid-template:
     "gbbb gbbb gbbb gbbb"
@@ -22,18 +22,22 @@
     "gb0 gb0 gbdot gbequals";
   grid-template-columns: 25% 25% 25% 25%;
   grid-template-rows: 14.3% 14.3% 14.3% 14.3% 14.3%;
-  background-color: aqua;
+  align-items: center;
+  justify-items: center;
 }
 
 .calculatorButton {
-  height: 100%;
-  width: 100%;
+  height: 70%;
+  width: 70%;
   border: 2px solid black;
+  border-radius: 40px;
+  text-align: center;
 }
 
 #gbbb {
   grid-area: gbbb;
-  width: 100%;
+  width: 90%;
+  border: 10px solid $color-primary;
 }
 #gbac {
   grid-area: gbac;
@@ -85,7 +89,7 @@
 }
 #gb0 {
   grid-area: gb0;
-  width: 100%;
+  width: 90%;
 }
 #gbdot {
   grid-area: gbdot;
