colors assigned with amendments to buttons

--- a/Style/_variables.scss
+++ b/Style/_variables.scss
@@ -1,5 +1,5 @@
-$color-primary: #2a9d8f;
-$color-secondary: #000000;
-$color-tertiary: #14213d;
-$color-quaternary: #e5e5e5;
-$color-quinary: #fca311;
+$color-primary: #00b4d8;
+$color-secondary: #ff686b;
+$color-tertiary: #ffc300;
+$color-quaternary: #56ab91;
+$color-quinary: #2a9d8f;
