--- a/Style/style.scss
+++ b/Style/style.scss
@@ -57,6 +57,11 @@
   border-radius: 10px;
   text-shadow: 0 0 10px $color-primary, 0 0 10px $color-primary;
   margin-top: -6%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  padding: 0 3% 2% 0;
+  font-size: 50px;
 }
 
 #gbac {
