--- a/Style/style.scss
+++ b/Style/style.scss
@@ -9,126 +9,127 @@
   padding: 0;
   background-color: black;
 }
-.calculatorGrid {
-  height: 70vh;
+
+section {
+  height: 50vh;
   width: 50vh;
-  display: grid;
-  grid-template:
-    "gbbb gbbb gbbb gbbb"
-    "gbbb gbbb gbbb gbbb"
-    "gbac gbp gbx gbd"
-    "gb7 gb8 gb9 gbm"
-    "gb4 gb5 gb6 gbplus"
-    "gb1 gb2 gb3 gbequals"
-    "gb0 gbdot gbps gbequals";
-  grid-template-columns: 25% 25% 25% 25%;
-  grid-template-rows: 14.3% 14.3% 14.3% 14.3% 14.3%;
-  align-items: center;
-  justify-items: center;
-  border: 5px solid white;
-  border-radius: 20px;
-  box-shadow: 0 0 10px 5px $color-quaternary inset,
-    0 0 10px 5px $color-quaternary;
-  padding: 2%;
-}
+  .calculatorGrid {
+    height: 70vh;
+    width: 50vh;
+    display: grid;
+    grid-template:
+    // "gbbb gbbb gbbb gbbb"
+    // "gbbb gbbb gbbb gbbb"
 
-.calculatorButton {
-  display: flex;
-  height: 80%;
-  width: 80%;
-  border: 2px solid black;
-  border-radius: 25px;
-  border: 5px solid white;
-  box-shadow: 0 0 10px 5px $color-primary inset, 0 0 10px 5px $color-primary;
-  color: white;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  font-size: 30px;
-  font-weight: 800;
-  text-shadow: 0px 0px 30px $color-quinary, 0px 0px 30px $color-quinary;
-}
+      "gbac gbp gbx gbd"
+      "gb7 gb8 gb9 gbm"
+      "gb4 gb5 gb6 gbplus"
+      "gb1 gb2 gb3 gbequals"
+      "gb0 gbdot gbps gbequals";
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 20% 20% 20% 20% 20%;
+    align-items: center;
+    justify-items: center;
+    border: 2px solid white;
+    border-radius: 0 0 20px 20px;
+    box-shadow: 0 0 10px 5px $color-quaternary inset,
+      0 0 10px 5px $color-quaternary;
+    padding: 2%;
+  }
 
-#gbbb {
-  grid-area: gbbb;
-  border: 5px solid white;
-  box-shadow: 0 0 10px 5px $color-secondary inset, 0 0 10px 5px $color-secondary;
-  width: 90%;
-  border-radius: 10px;
-  text-shadow: 0 0 10px $color-primary, 0 0 10px $color-primary;
-  margin-top: -6%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  padding: 0 3% 2% 0;
-  font-size: 50px;
-}
+  .calculatorButton {
+    display: flex;
+    height: 85%;
+    width: 85%;
+    border: 2px solid black;
+    border-radius: 10px;
+    border: 2px solid white;
+    box-shadow: 0 0 10px 3px $color-primary inset, 0 0 10px 3px $color-primary;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 800;
+    text-shadow: 0px 0px 30px $color-quinary, 0px 0px 30px $color-quinary;
+  }
+  #gbbb {
+    grid-area: gbbb;
+    border: 3px solid white;
+    box-shadow: 0 0 10px 5px $color-secondary inset,
+      0 0 10px 5px $color-secondary;
+    width: 100%;
+    height: 30%;
+    border-radius: 20px 20px 0 0;
+    text-shadow: 0 0 10px $color-primary, 0 0 10px $color-primary;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    padding: 0 3% 2% 0;
+    font-size: 50px;
+  }
 
-#gbac {
-  grid-area: gbac;
+  #gbac {
+    grid-area: gbac;
 
-  box-shadow: 0 0 10px 5px $color-quaternary inset,
-    0 0 10px 5px $color-quaternary;
+    box-shadow: 0 0 10px 5px $color-quaternary inset,
+      0 0 10px 5px $color-quaternary;
+  }
+  #gbps {
+    grid-area: gbps;
+  }
+  #gbp {
+    grid-area: gbp;
+  }
+  #gbd {
+    grid-area: gbd;
+  }
+  #gb7 {
+    grid-area: gb7;
+  }
+  #gb8 {
+    grid-area: gb8;
+  }
+  #gb9 {
+    grid-area: gb9;
+  }
+  #gbx {
+    grid-area: gbx;
+  }
+  #gb4 {
+    grid-area: gb4;
+  }
+  #gb5 {
+    grid-area: gb5;
+  }
+  #gb6 {
+    grid-area: gb6;
+  }
+  #gbm {
+    grid-area: gbm;
+  }
+  #gb1 {
+    grid-area: gb1;
+  }
+  #gb2 {
+    grid-area: gb2;
+  }
+  #gb3 {
+    grid-area: gb3;
+  }
+  #gbplus {
+    grid-area: gbplus;
+  }
+  #gb0 {
+    grid-area: gb0;
+    width: 90%;
+  }
+  #gbdot {
+    grid-area: gbdot;
+  }
+  #gbequals {
+    grid-area: gbequals;
+    box-shadow: 0 0 10px 5px $color-tertiary inset, 0 0 10px 5px $color-tertiary;
+    height: 90%;
+  }
 }
-#gbps {
-  grid-area: gbps;
-}
-#gbp {
-  grid-area: gbp;
-}
-#gbd {
-  grid-area: gbd;
-}
-#gb7 {
-  grid-area: gb7;
-}
-#gb8 {
-  grid-area: gb8;
-}
-#gb9 {
-  grid-area: gb9;
-}
-#gbx {
-  grid-area: gbx;
-}
-#gb4 {
-  grid-area: gb4;
-}
-#gb5 {
-  grid-area: gb5;
-}
-#gb6 {
-  grid-area: gb6;
-}
-#gbm {
-  grid-area: gbm;
-}
-#gb1 {
-  grid-area: gb1;
-}
-#gb2 {
-  grid-area: gb2;
-}
-#gb3 {
-  grid-area: gb3;
-}
-#gbplus {
-  grid-area: gbplus;
-}
-#gb0 {
-  grid-area: gb0;
-  width: 90%;
-}
-#gbdot {
-  grid-area: gbdot;
-}
-#gbequals {
-  grid-area: gbequals;
-  box-shadow: 0 0 10px 5px $color-tertiary inset, 0 0 10px 5px $color-tertiary;
-  height: 90%;
-}
-// div {
-//   border: 5px solid black;
-//   height: 5vh;
-//   width: 5vh;
-// }
