--- a/Style/style.css
+++ b/Style/style.css
@@ -1,17 +1,29 @@
 * {
   box-sizing: border-box;
-  margin: 2%;
+  margin: 0;
   padding: 0;
-  background-color: black;
 }
 
-section {
-  height: 50vh;
-  width: 50vh;
+body {
+  background-image: url(./wp9119050.jpg);
+  background-size: cover;
+  height: 100%;
+  width: 100%;
 }
-section .calculatorGrid {
-  height: 70vh;
-  width: 50vh;
+body main {
+  margin-top: 5%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+body section {
+  height: 100%;
+  width: 40vh;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+body section .calculatorGrid {
+  height: 55vh;
+  width: 40vh;
   display: grid;
   grid-template: "gbac gbp gbx gbd" "gb7 gb8 gb9 gbm" "gb4 gb5 gb6 gbplus" "gb1 gb2 gb3 gbequals" "gb0 gbdot gbps gbequals";
   grid-template-columns: 25% 25% 25% 25%;
@@ -23,7 +35,7 @@ section .calculatorGrid {
   box-shadow: 0 0 10px 5px #56ab91 inset, 0 0 10px 5px #56ab91;
   padding: 2%;
 }
-section .calculatorButton {
+body section .calculatorButton {
   display: flex;
   height: 85%;
   width: 85%;
@@ -35,16 +47,16 @@ section .calculatorButton {
   align-items: center;
   justify-content: center;
   text-align: center;
-  font-size: 30px;
+  font-size: 4vh;
   font-weight: 800;
-  text-shadow: 0px 0px 30px #2a9d8f, 0px 0px 30px #2a9d8f;
+  text-shadow: 1px 1px #56ab91;
 }
-section #gbbb {
+body section #gbbb {
   grid-area: gbbb;
   border: 3px solid white;
   box-shadow: 0 0 10px 5px #ff686b inset, 0 0 10px 5px #ff686b;
   width: 100%;
-  height: 30%;
+  height: 13vh;
   border-radius: 20px 20px 0 0;
   text-shadow: 0 0 10px #00b4d8, 0 0 10px #00b4d8;
   display: flex;
@@ -53,63 +65,63 @@ section #gbbb {
   padding: 0 3% 2% 0;
   font-size: 50px;
 }
-section #gbac {
+body section #gbac {
   grid-area: gbac;
   box-shadow: 0 0 10px 5px #56ab91 inset, 0 0 10px 5px #56ab91;
 }
-section #gbps {
+body section #gbps {
   grid-area: gbps;
 }
-section #gbp {
+body section #gbp {
   grid-area: gbp;
 }
-section #gbd {
+body section #gbd {
   grid-area: gbd;
 }
-section #gb7 {
+body section #gb7 {
   grid-area: gb7;
 }
-section #gb8 {
+body section #gb8 {
   grid-area: gb8;
 }
-section #gb9 {
+body section #gb9 {
   grid-area: gb9;
 }
-section #gbx {
+body section #gbx {
   grid-area: gbx;
 }
-section #gb4 {
+body section #gb4 {
   grid-area: gb4;
 }
-section #gb5 {
+body section #gb5 {
   grid-area: gb5;
 }
-section #gb6 {
+body section #gb6 {
   grid-area: gb6;
 }
-section #gbm {
+body section #gbm {
   grid-area: gbm;
 }
-section #gb1 {
+body section #gb1 {
   grid-area: gb1;
 }
-section #gb2 {
+body section #gb2 {
   grid-area: gb2;
 }
-section #gb3 {
+body section #gb3 {
   grid-area: gb3;
 }
-section #gbplus {
+body section #gbplus {
   grid-area: gbplus;
 }
-section #gb0 {
+body section #gb0 {
   grid-area: gb0;
   width: 90%;
 }
-section #gbdot {
+body section #gbdot {
   grid-area: gbdot;
 }
-section #gbequals {
+body section #gbequals {
   grid-area: gbequals;
   box-shadow: 0 0 10px 5px #ffc300 inset, 0 0 10px 5px #ffc300;
   height: 90%;
