--- a/Style/style.css
+++ b/Style/style.css
@@ -149,8 +149,10 @@ body section #gbbb {
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+  word-break: break-all;
+  word-wrap: break-word;
   padding: 0 3% 2% 0;
-  font-size: 50px;
+  font-size: 4vh;
 }
 body section button:focus,
 body section button:active,
