--- a/Style/style.scss
+++ b/Style/style.scss
@@ -52,8 +52,10 @@ body {
       display: flex;
       justify-content: flex-end;
       align-items: flex-end;
+      word-break: break-all;
+      word-wrap: break-word;
       padding: 0 3% 2% 0;
-      font-size: 50px;
+      font-size: 4vh;
       // margin-top: -20%;
     }
     button:focus,
