--- a/Style/_variables.scss
+++ b/Style/_variables.scss
@@ -3,3 +3,4 @@ $color-secondary: #ff686b;
 $color-tertiary: #ffc300;
 $color-quaternary: #56ab91;
 $color-quinary: #2a9d8f;
+$color-senary: #ae67eb;
