--- a/Style/style.css
+++ b/Style/style.css
@@ -21,7 +21,7 @@ button {
 #gbac {
   grid-area: gbac;
   width: 95%;
-  box-shadow: 0 0 10px 5px #56ab91 inset, 0 0 10px 5px #56ab91;
+  box-shadow: 0 0 10px 3px #ae67eb inset, 0 0 10px 3px #ae67eb;
 }
 
 #gbps {
@@ -87,6 +87,7 @@ button {
 #gb0 {
   grid-area: gb0;
   width: 90%;
+  box-shadow: 0 0 10px 3px #ae67eb inset, 0 0 10px 3px #ae67eb;
 }
 
 #gbdot {
