--- a/Style/style.css
+++ b/Style/style.css
@@ -100,6 +100,30 @@ button {
   height: 90%;
 }
 
+@media screen and (min-width: 0px) and (max-width: 400px) {
+  body {
+    background-image: url(./neon.jpg);
+    background-size: cover;
+  }
+  body section {
+    margin-top: 15%;
+  }
+}
+@media screen and (min-width: 401px) and (max-width: 820px) {
+  body {
+    background-image: url(./wp3102502.jpg);
+    background-size: cover;
+  }
+  body section {
+    margin-top: 12%;
+  }
+}
+@media screen and (min-width: 821px) and (max-width: 7000px) {
+  body {
+    background-image: url(./wp9119050.jpg);
+    background-size: cover;
+  }
+}
 * {
   box-sizing: border-box;
   margin: 0;
@@ -107,8 +131,6 @@ button {
 }
 
 body {
-  background-image: url(./wp9119050.jpg);
-  background-size: cover;
   height: 100%;
   width: 100%;
 }
